Log feature is added as a plugin
Log functionality is added to reflect the plugin behaviour.

--- a/com.arm.cmsis.pack.ui/plugin.xml
+++ b/com.arm.cmsis.pack.ui/plugin.xml
@@ -8,12 +8,14 @@
             class="com.arm.cmsis.pack.ui.preferences.CpPreferenceInitializer">
       </initializer>
    </extension>
+   
+   
    <extension
          point="org.eclipse.ui.preferencePages">
       <page
             class="com.arm.cmsis.pack.ui.preferences.CpPreferencePage"
             id="com.arm.cmsis.pack.ui.CpPreferencePage"
-            name="CMSIS Packs">
+            name="***PageName*** CMSIS Packs">
       </page>
    </extension>
 
